--- a/favoritos.html
+++ b/favoritos.html
@@ -35,7 +35,7 @@
 
 
 
-<section id="favoritos">
+<section id="favoritos" class="muestraFavoritos">
 
 </section>
 
@@ -98,7 +98,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f7a3ba95e0.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="./js/script.js"></script>
     <script src="./js/favoritos.js"></script>
 </body>
 </html>
