--- a/favoritos.html
+++ b/favoritos.html
@@ -18,7 +18,7 @@
         <ul class="navBar">
            <a href="./index.html"><li class="items1">Propiedades</li></a>
            <a href=""><li class="items2">Contacto</li></a> 
-           <a href="./favoritos.html" id="verFavoritos"><li class="items2">Favoritos</li></a> 
+           <a href="./favoritos.html" id="verFavoritos"><li class="items2">Favoritos <span id="contador"></span></li></a> 
 
         </ul>
     </nav>
