--- a/favoritos.html
+++ b/favoritos.html
@@ -18,82 +18,22 @@
         <ul class="navBar">
            <a href="./index.html"><li class="items1">Propiedades</li></a>
            <a href=""><li class="items2">Contacto</li></a> 
-           <a href="./favoritos.html" id="verFavoritos"><li class="items2">Favoritos <span id="contador"></span></li></a> 
+           <a href="./favoritos.html" id="verFavoritos"><li class="items2">Favoritos</li></a> 
 
         </ul>
     </nav>
 </header>
-
-
 <main>
-
-
-
-<h2>
+<h2 id="favTitulo">
     FAVORITOS
 </h2>
 
-
-
 <section id="favoritos" class="muestraFavoritos">
-
 </section>
-
-
-
-
-
-
-
-
-
-
 </main>
-
-
-
-
-
-
-
-
-
 <footer>
-
 </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f7a3ba95e0.js" crossorigin="anonymous"></script>
